--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
         "prestart": "npm run build",
         "start": "node dist/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "rollup --config",
-        "watch": "rollup --config -w"
+        "copy_cli": "test -d dist || mkdir -p dist && cp ./src/cli.js dist",
+        "build": "npm run copy_cli && rollup --config",
+        "watch": "npm run copy_cli && rollup --config -w"
     },
     "author": "Pachito Marco Calabrese <pm.calabrese@gmail.com>",
     "license": "ISC",
