--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "bin": {
         "node-scaffolder": "dist/cli.js"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/pmcalabrese/node-scaffolder.git"
+    },
     "scripts": {
         "prestart": "npm run build",
         "start": "node dist/index.js",
@@ -18,14 +22,14 @@
     "author": "Pachito Marco Calabrese <pm.calabrese@gmail.com>",
     "license": "ISC",
     "dependencies": {
-        "colors": "^1.2.1",
+        "colors": "^1.3.0",
         "inquirer": "^5.2.0",
         "ncp": "^2.0.0",
-        "request": "^2.85.0"
+        "request": "^2.87.0"
     },
     "devDependencies": {
-        "rollup": "^0.57.1",
-        "rollup-plugin-commonjs": "^9.1.0",
+        "rollup": "^0.59.2",
+        "rollup-plugin-commonjs": "^9.1.3",
         "rollup-plugin-node-resolve": "^3.3.0"
     }
 }
