--- a/templates/typescript/tsconfig.json
+++ b/templates/typescript/tsconfig.json
@@ -5,7 +5,8 @@
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "declaration": true
     },
     "include": [
         "src/**/*"
