--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "node-scaffolder": "dist/cli.js"
     },
     "files": [
-        "dist"
+        "dist",
+        "templates"
     ],
     "repository": {
         "type": "git",
