--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-scaffolder",
-    "version": "1.1.4",
+    "version": "1.1.5",
     "description": "Node-scaffolder is an interactive command line tool to create Node.js project quickly. With it, with just 3 questions (which takes 10 seconds) you can scaffold a project with your favorite language (JS or TS) bundler (Babel, Webpack 4, Rollup, TSC) and test setup.",
     "main": "./dist/index.js",
     "bin": {
@@ -21,7 +21,7 @@
         "copy_cli": "test -d dist || mkdir -p dist && cp ./src/cli.js dist",
         "build": "npm run copy_cli && rollup --config",
         "watch": "npm run copy_cli && rollup --config -w",
-        "prepublishOnly": "npm run build && git push --tagsh"
+        "prepublishOnly": "npm run build && git push --tags"
     },
     "author": "Pachito Marco Calabrese <pm.calabrese@gmail.com>",
     "license": "ISC",
