--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-scaffolder",
-    "version": "1.1.5",
+    "version": "1.2.0",
     "description": "Node-scaffolder is an interactive command line tool to create Node.js project quickly. With it, with just 3 questions (which takes 10 seconds) you can scaffold a project with your favorite language (JS or TS) bundler (Babel, Webpack 4, Rollup, TSC) and test setup.",
     "main": "./dist/index.js",
     "bin": {
@@ -19,6 +19,8 @@
         "start": "node dist/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "copy_cli": "test -d dist || mkdir -p dist && cp ./src/cli.js dist",
+        "prettier": "prettier --check 'src/**/*.js' --write",
+        "build-prod": "npm run prettier && npm run copy_cli && NODE_ENV=production rollup --config",
         "build": "npm run copy_cli && rollup --config",
         "watch": "npm run copy_cli && rollup --config -w",
         "prepublishOnly": "npm run build && git push --tags"
@@ -26,14 +28,16 @@
     "author": "Pachito Marco Calabrese <pm.calabrese@gmail.com>",
     "license": "ISC",
     "dependencies": {
-        "colors": "^1.3.2",
-        "inquirer": "^6.2.0",
+        "colors": "^1.3.3",
+        "inquirer": "^6.2.2",
         "ncp": "^2.0.0",
-        "request": "^2.88.0"
+        "update-check": "^1.5.3"
     },
     "devDependencies": {
-        "rollup": "^0.65.0",
-        "rollup-plugin-commonjs": "^9.1.6",
-        "rollup-plugin-node-resolve": "^3.3.0"
+        "rollup": "^1.10.0",
+        "rollup-plugin-commonjs": "^9.3.4",
+        "rollup-plugin-json": "^4.0.0",
+        "rollup-plugin-node-resolve": "^4.2.3",
+        "rollup-plugin-terser": "^4.0.4"
     }
 }
