--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "name": "node-scaffolder",
-    "version": "1.2.3",
-    "description": "Node-scaffolder is an interactive command line tool to create Node.js project quickly. With it, with just 3 questions (which takes 10 seconds) you can scaffold a project with your favorite language (JS or TS) bundler (Babel, Webpack 4, Rollup, TSC) and test setup.",
+    "version": "1.2.4",
+    "description": "Node-scaffolder is an interactive command line tool to create Node.js projects quickly. With just 3 questions (which takes 10 seconds) you can scaffold a project with your favorite language (JS or TS) bundler (Babel, Webpack 4, Rollup, TSC) and test setup (coming soon).",
     "main": "./dist/index.js",
     "bin": {
         "node-scaffolder": "dist/cli.js"
     },
     "files": [
         "dist",
-        "templates"
+        "templates",
+        "templates/.gitignore"
     ],
     "repository": {
         "type": "git",
